plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.graalvm.buildtools.native' version '0.11.4'
	id 'com.diffplug.spotless' version '8.2.1'
    id 'io.freefair.lombok' version '9.2.0'
	id 'checkstyle'
	id 'pmd'
	id 'com.github.spotbugs' version '6.4.8'
	id 'jacoco'
}

group = 'io.jagratha'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

	implementation 'org.springframework.ai:spring-ai-starter-mcp-server:2.0.0-M2'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-jackson-test'
	testImplementation 'io.projectreactor:reactor-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
				minimum = 0.80
			}
		}
	}
}

check.dependsOn jacocoTestCoverageVerification

spotless {
	java {
        importOrder()
        removeUnusedImports()
        cleanthat()
        googleJavaFormat().reflowLongStrings()
        leadingTabsToSpaces(4)
		trimTrailingWhitespace()
		endWithNewline()
        targetExclude("bin/**", "build/**", "out/**")
	}
}

checkstyle {
	toolVersion = '13.2.0'
	configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
	ignoreFailures = false
	showViolations = true
}

pmd {
	toolVersion = '7.21.0'
	ruleSets = ["${project.rootDir}/config/pmd/ruleset.xml"]
	ignoreFailures = false
	consoleOutput = true
}

// Disable quality tasks for everything except main
tasks.configureEach { task ->
    if ((task.name.contains("Aot") || task.name.contains("Test")) && (task instanceof Checkstyle || task instanceof Pmd || task.class.name.contains("SpotBugs"))) {
        task.enabled = false
    }
}

graalvmNative {
    binaries {
        main {
            imageName = 'jagratha'
            mainClass = 'io.jagratha.jagratha.JagrathaApplication'
            buildArgs.add('--no-fallback')
        }
    }
}
